--- a/css/projects.css
+++ b/css/projects.css
@@ -254,7 +254,7 @@ img{
   margin: 0 0 0 5%;
 }
 .proj5{
-  background-image: url("../images/Sketches.PNG");
+  background-image: url("../images/Sketches.png");
   width: 30%;
   margin: 0 2%;
 }
@@ -275,7 +275,7 @@ img{
   margin: 0 2%;
 }
 .proj9{
-  background-image: url("../images/overall.png");
+  background-image: url("../images/overall.PNG");
   background-position: center;
   margin: 0 5% 0 0;
 }
