--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,7 @@ body{
   background-image: url("../images/proj2.PNG");
 }
 .proj2{
-  background-image: url("../images/pitch.PNG");
+  background-image: url("../images/pitch.png");
   width: 34%;
 }
 .proj3{
